# KiloNova-poc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: genericfolding.rs  lib.rs  multifolding.rs
src/bellpepper/: mod.rs
src/ccs/: accs.rs  cccs.rs  ccs.rs  lcccs.rs  mod.rs  util.rs
src/espresso/: multilinear_polynomial.rs  virtual_polynomial.rs
src/util/: mle.rs  vec.rs
