[package]
name = "Kilonova-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ff = {version="^0.4.0", features=["parallel"]}
ark-poly = {version="^0.4.0", features=["parallel"]}
ark-ec = "^0.4.0"
ark-serialize = "0.4.2"
ark-std = { version = "^0.4.0", features=["parallel"] }
displaydoc = "0.2.4"
rayon = "1.7.0"
thiserror = "1.0.40"
serde = { version = "1.0", features = ["derive"] }

# import for poly_iop & transcript
subroutines = {git="https://github.com/EspressoSystems/hyperplonk"}
transcript = {git="https://github.com/EspressoSystems/hyperplonk"}
ff = "0.13.0"
pasta_curves = "0.5.1"
spartan2 = { git = "https://github.com/Microsoft/Spartan2" }
bellpepper = "0.2.0"
bellpepper-core = "0.2.1"
ark-pallas = "0.4.0"
group = "0.13.0"

[features]
# default = [ "parallel", "print-trace" ]
default = ["parallel"]
# extensive sanity checks that are useful for debugging
extensive_sanity_checks = [ ]

parallel = [ 
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    ]
print-trace = [ 
    "ark-std/print-trace",
    ] 
